--- a/app/globals.css
+++ b/app/globals.css
@@ -36,10 +36,12 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+html {
+  scroll-behavior: smooth !important;
 
+}
 body {
   color: rgb(var(--foreground-rgb)) !important;
-  scroll-behavior: smooth;
   background: linear-gradient(
       to bottom,
       transparent,
